incial: hamburguesas y salchipapas

--- a/index.html
+++ b/index.html
@@ -12,51 +12,51 @@
     <img src="./images/logo.svg" width="40%"/>
     <p>Bienvenidos...les presentamos a Añañau Restobar, una propuesta auténtica de comida y bebida acompañada con una experiencia única que despertará todos tus sentidos...</p>
   </header>
-  <div class="list-burger">
-    <div class="burger">
-      <div class="burger-title">LA AÑAÑAU</div>
-      <div class="burger-description">150 gr de hamburguesa artesanal, lechuga y tomate en pan de chia</div>
-      <div class="burger-price">S/.12.90</div>  
+  <div class="list-food">
+    <div class="food">
+      <div class="food-title">LA AÑAÑAU</div>
+      <div class="food-description">150 gr de hamburguesa artesanal, lechuga y tomate en pan de chia</div>
+      <div class="food-price">S/.12.90</div>  
     </div>
-    <div class="burger">
-      <div class="burger-title">LA PAISANA</div>
-      <div class="burger-description">150 grs. de hamburguesa artesanal, queso andino, lechuga y tomate en pan de chia</div>
-      <div class="burger-price">S/.14.90</div>  
+    <div class="food">
+      <div class="food-title">LA PAISANA</div>
+      <div class="food-description">150 grs. de hamburguesa artesanal, queso andino, lechuga y tomate en pan de chia</div>
+      <div class="food-price">S/.14.90</div>  
     </div>
-    <div class="burger">
-      <div class="burger-title">LA PABLUCHA</div>
-      <div class="burger-description">150 grs. de hamburguesa artesanal con tomates contados en ajo, chips de camote, lechuga en pan de chía</div>
-      <div class="burger-price">S/.12.90</div>  
+    <div class="food">
+      <div class="food-title">LA PABLUCHA</div>
+      <div class="food-description">150 grs. de hamburguesa artesanal con tomates contados en ajo, chips de camote, lechuga en pan de chía</div>
+      <div class="food-price">S/.12.90</div>  
     </div>
-    <div class="burger">
-      <div class="burger-title">LA PARRICHI</div>
-      <div class="burger-description">150 grs. de Hamburguesa artesanal con salsa bbq, tocino, queso andino, lechuga y tomate en pan de chia</div>
-      <div class="burger-price">S/.14.90</div>  
+    <div class="food">
+      <div class="food-title">LA PARRICHI</div>
+      <div class="food-description">150 grs. de Hamburguesa artesanal con salsa bbq, tocino, queso andino, lechuga y tomate en pan de chia</div>
+      <div class="food-price">S/.14.90</div>  
     </div>
-    <div class="burger">
-      <div class="burger-title">LA TAYPA</div>
-      <div class="burger-description">Doble hamburguesa artesanal, tocino, huevo, papitas nativas tomate, lechuga y aros de cebolla en pan de chía</div>
-      <div class="burger-price">S/.12.90</div>  
+    <div class="food">
+      <div class="food-title">LA TAYPA</div>
+      <div class="food-description">Doble hamburguesa artesanal, tocino, huevo, papitas nativas tomate, lechuga y aros de cebolla en pan de chía</div>
+      <div class="food-price">S/.12.90</div>  
     </div>
-    <div class="burger">
-      <div class="burger-title">LA QOSQORUNA</div>
-      <div class="burger-description">150 grs. de Hamburguesa artesanal con salsa de aguaymanto, queso andino, lechuga y tomate en pan de chía.</div>
-      <div class="burger-price">S/.14.90</div>  
+    <div class="food">
+      <div class="food-title">LA QOSQORUNA</div>
+      <div class="food-description">150 grs. de Hamburguesa artesanal con salsa de aguaymanto, queso andino, lechuga y tomate en pan de chía.</div>
+      <div class="food-price">S/.14.90</div>  
     </div>
-    <div class="burger">
-      <div class="burger-title">LA PONJA</div>
-      <div class="burger-description">Tiras de pollo en salsa oriental, ajonjolí negro, tomate, lechuga en pan de chía</div>
-      <div class="burger-price">S/.14.90</div>  
+    <div class="food">
+      <div class="food-title">LA PONJA</div>
+      <div class="food-description">Tiras de pollo en salsa oriental, ajonjolí negro, tomate, lechuga en pan de chía</div>
+      <div class="food-price">S/.14.90</div>  
     </div>  
-    <div class="burger">
-      <div class="burger-title">LA CHICKEN GREEN</div>
-      <div class="burger-description">Filete  de pollo al oregano con huevo y tocino crocante, lechuga y tomate en pan de chía</div>
-      <div class="burger-price">S/.14.90</div>  
+    <div class="food">
+      <div class="food-title">LA CHICKEN GREEN</div>
+      <div class="food-description">Filete  de pollo al oregano con huevo y tocino crocante, lechuga y tomate en pan de chía</div>
+      <div class="food-price">S/.14.90</div>  
     </div>
-    <div class="burger">
-      <div class="burger-title">LA FITNESS</div>
-      <div class="burger-description">Trozos de pollo en vinagreta de muña, aros de cebolla y ensalada fresca en pan tostado</div>
-      <div class="burger-price">S/.12.90</div>  
+    <div class="food">
+      <div class="food-title">LA FITNESS</div>
+      <div class="food-description">Trozos de pollo en vinagreta de muña, aros de cebolla y ensalada fresca en pan tostado</div>
+      <div class="food-price">S/.12.90</div>  
     </div>
   </div>
   <div class="list-wings">
@@ -71,6 +71,52 @@
       <div class="wing-section">
         <img src="./images/chicken-wings01.jpg" alt="alitas bbq limo" width="500" height="600">
       </div>      
+    </div>
+    <div class="wing">
+      <div class="wing-section">
+        <img src="./images/chicken-wings01.jpg" alt="alitas bbq limo" width="500" height="600">
+      </div>      
+      <div class="wing-section">
+        <div class="wing-title">
+          <div class="wing-title-text">ALITAS BBQ aguaymanto</div>
+          <div class="wing-title-price">S/.16.90</div>    
+        </div>
+        <div class="wing-description">06 piezas de alitas de pollo bañadas en salsa de aguaymanto BBQ, acompañadas de papitas nativas</div>  
+      </div>
+    </div>
+    <div class="wing">
+      <div class="wing-section">
+        <div class="wing-title">
+          <div class="wing-title-text">ALITAS BBQ ORIENTALES</div>
+          <div class="wing-title-price">S/.16.90</div>    
+        </div>
+        <div class="wing-description">06 piezas de alitas de pollo bañadas en salsa oriental y ajonjoli, acompañadas de papitas nativas</div>  
+      </div>
+      <div class="wing-section">
+        <img src="./images/chicken-wings01.jpg" alt="alitas bbq limo" width="500" height="600">
+      </div>      
+    </div>    
+    <div class="list-food">
+      <div class="food">
+        <div class="food-title">LA CLASICA</div>
+        <div class="food-description">Salchicha de pollo con papas nativas fritas</div>
+        <div class="food-price">S/.12.90</div>  
+      </div>
+      <div class="food">
+        <div class="food-title">LA MIKI</div>
+        <div class="food-description">Salchicha frankfurter, salchipa de pollo y chorizo parrillero con papas nativas fritas</div>
+        <div class="food-price">S/.14.90</div>  
+      </div>
+      <div class="food">
+        <div class="food-title">LA CHORITA</div>
+        <div class="food-description">Chorizo parrillero con papas nativas fritas</div>
+        <div class="food-price">S/.12.90</div>  
+      </div>
+      <div class="food">
+        <div class="food-title">LA 4 SUYOS</div>
+        <div class="food-description">Salchicha, pollo, chorizo y huevo con papas nativas fritas</div>
+        <div class="food-price">S/.14.90</div>  
+      </div>
     </div>
   </div>
 </body>
