--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <img src="./images/logo.svg" width="40%"/>
     <p>Bienvenidos...les presentamos a Añañau Restobar, una propuesta auténtica de comida y bebida acompañada con una experiencia única que despertará todos tus sentidos...</p>
   </header>
+
   <div class="list-food">
     <div class="food">
       <div class="food-title">LA AÑAÑAU</div>
@@ -58,67 +59,70 @@
       <div class="food-description">Trozos de pollo en vinagreta de muña, aros de cebolla y ensalada fresca en pan tostado</div>
       <div class="food-price">S/.12.90</div>  
     </div>
-  </div>
+  </div>  
+
   <div class="list-wings">
     <div class="wing">
       <div class="wing-section">
-        <div class="wing-title">
-          <div class="wing-title-text">ALITAS BBQ LIMO</div>
-          <div class="wing-title-price">S/.16.90</div>    
+        <div class="wing-header">
+          <div class="wing-header-tittle">ALITAS BBQ LIMO</div>
+          <div class="wing-header-price">S/. 16.90</div>  
         </div>
-        <div class="wing-description">06 piezas de alitas de pollo bañadas  en salsa picante y aji limo, acompañadas de papitas nativas</div>  
+        <div class="wing-body">06 piezas de alitas de pollo bañadas en salsa picante y aji limo, acompañadas de papitas nativas</div>
       </div>
       <div class="wing-section">
-        <img src="./images/chicken-wings01.jpg" alt="alitas bbq limo" width="500" height="600">
-      </div>      
-    </div>
-    <div class="wing">
-      <div class="wing-section">
-        <img src="./images/chicken-wings01.jpg" alt="alitas bbq limo" width="500" height="600">
-      </div>      
-      <div class="wing-section">
-        <div class="wing-title">
-          <div class="wing-title-text">ALITAS BBQ aguaymanto</div>
-          <div class="wing-title-price">S/.16.90</div>    
-        </div>
-        <div class="wing-description">06 piezas de alitas de pollo bañadas en salsa de aguaymanto BBQ, acompañadas de papitas nativas</div>  
+        <img src="images/alitas-bbq.jpg" alt="" srcset="">
       </div>
     </div>
     <div class="wing">
       <div class="wing-section">
-        <div class="wing-title">
-          <div class="wing-title-text">ALITAS BBQ ORIENTALES</div>
-          <div class="wing-title-price">S/.16.90</div>    
+        <img src="images/alitas-bbq.jpg" alt="" srcset="">
+      </div>      
+      <div class="wing-section">
+        <div class="wing-header">
+          <div class="wing-header-tittle">ALITAS BBQ AGUAYMANTO</div>
+          <div class="wing-header-price">S/. 16.90</div>  
         </div>
-        <div class="wing-description">06 piezas de alitas de pollo bañadas en salsa oriental y ajonjoli, acompañadas de papitas nativas</div>  
+        <div class="wing-body">06 piezas de alitas de pollo bañadas en salsa de aguaymanto BBQ, acompañadas de papitas nativas</div>
+      </div>
+    </div>
+    <div class="wing">
+      <div class="wing-section">
+        <div class="wing-header">
+          <div class="wing-header-tittle">ALITAS BBQ ORIENTALES</div>
+          <div class="wing-header-price">S/. 16.90</div>  
+        </div>
+        <div class="wing-body">06 piezas de alitas de pollo bañadas en salsa oriental y ajonjoli, acompañadas de papitas nativas</div>
       </div>
       <div class="wing-section">
-        <img src="./images/chicken-wings01.jpg" alt="alitas bbq limo" width="500" height="600">
-      </div>      
-    </div>    
-    <div class="list-food">
-      <div class="food">
-        <div class="food-title">LA CLASICA</div>
-        <div class="food-description">Salchicha de pollo con papas nativas fritas</div>
-        <div class="food-price">S/.12.90</div>  
-      </div>
-      <div class="food">
-        <div class="food-title">LA MIKI</div>
-        <div class="food-description">Salchicha frankfurter, salchipa de pollo y chorizo parrillero con papas nativas fritas</div>
-        <div class="food-price">S/.14.90</div>  
-      </div>
-      <div class="food">
-        <div class="food-title">LA CHORITA</div>
-        <div class="food-description">Chorizo parrillero con papas nativas fritas</div>
-        <div class="food-price">S/.12.90</div>  
-      </div>
-      <div class="food">
-        <div class="food-title">LA 4 SUYOS</div>
-        <div class="food-description">Salchicha, pollo, chorizo y huevo con papas nativas fritas</div>
-        <div class="food-price">S/.14.90</div>  
+        <img src="images/alitas-bbq.jpg" alt="" srcset="">
       </div>
     </div>
   </div>
+
+  <div class="list-food">
+    <div class="food">
+      <div class="food-title">LA CLASICA</div>
+      <div class="food-description">Salchicha de pollo con papas nativas fritas</div>
+      <div class="food-price">S/.12.90</div>  
+    </div>
+    <div class="food">
+      <div class="food-title">LA MIKI</div>
+      <div class="food-description">Salchicha frankfurter, salchipa de pollo y chorizo parrillero con papas nativas fritas</div>
+      <div class="food-price">S/.14.90</div>  
+    </div>
+    <div class="food">
+      <div class="food-title">LA CHORITA</div>
+      <div class="food-description">Chorizo parrillero con papas nativas fritas</div>
+      <div class="food-price">S/.12.90</div>  
+    </div>
+    <div class="food">
+      <div class="food-title">LA 4 SUYOS</div>
+      <div class="food-description">Salchicha, pollo, chorizo y huevo con papas nativas fritas</div>
+      <div class="food-price">S/.14.90</div>  
+    </div>
+  </div>  
+
+
 </body>
 </html>
-
