wings con media query

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
   </div>  
 
-  <div class="list-wings">
+  <div class="list-wing">
     <div class="wing">
       <div class="wing-section">
         <div class="wing-header">
@@ -75,10 +75,10 @@
       </div>
     </div>
     <div class="wing">
-      <div class="wing-section">
+      <div class="wing-section" id="order1">
         <img src="images/alitas-bbq.jpg" alt="" srcset="">
       </div>      
-      <div class="wing-section">
+      <div class="wing-section" id="order2">
         <div class="wing-header">
           <div class="wing-header-tittle">ALITAS BBQ AGUAYMANTO</div>
           <div class="wing-header-price">S/. 16.90</div>  
