--- a/en/index.html
+++ b/en/index.html
@@ -5,15 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <header>
     <div class="idioma">
-      <a href="./en/">english</a>
+      <a href="../">espa&ntilde;ol</a>
     </div>
     <img src="/images/logo.svg" width="40%"/>
-    <p>Bienvenidos...les presentamos a A&ntilde;a&ntilde;au Restobar, una propuesta auténtica de comida y bebida acompa&ntilde;ada con una experiencia única que despertará todos tus sentidos...</p>
+    <p>Welcome... we introduce you "A&ntilde;a&ntilde;au Restobar", an authentic food and drink alternative which offers to you a unique experience that will awake all your senses...</p>
   </header>
 
   <div class="list-food">
