--- a/en/index.html
+++ b/en/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>A&ntilde;a&ntilde;au Restobar</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+
   <header>
     <div class="idioma">
       <a href="../">espa&ntilde;ol</a>
@@ -15,61 +16,62 @@
     <img src="/images/logo.svg" width="40%"/>
     <p>Welcome... we introduce you "A&ntilde;a&ntilde;au Restobar", an authentic food and drink alternative which offers to you a unique experience that will awake all your senses...</p>
   </header>
-
+  <div class="food-type-tittle">HAMBURGUESAS</div>
+  <img class="imagen-seccion" src="/images/burgers.png" alt="">
   <div class="list-food">
     <div class="food">
       <div class="food-title">LA A&Ntilde;A&Ntilde;AU</div>
       <div class="food-description">150 gr de hamburguesa artesanal, lechuga y tomate en pan de chia</div>
-      <div class="food-price">S/.12.90</div>  
+      <div class="food-price">S/.13.90</div>  
     </div>
     <div class="food">
       <div class="food-title">LA PAISANA</div>
       <div class="food-description">150 grs. de hamburguesa artesanal, queso andino, lechuga y tomate en pan de chia</div>
-      <div class="food-price">S/.14.90</div>  
+      <div class="food-price">S/.15.90</div>  
     </div>
     <div class="food">
       <div class="food-title">LA PABLUCHA</div>
       <div class="food-description">150 grs. de hamburguesa artesanal con tomates contados en ajo, chips de camote, lechuga en pan de chía</div>
-      <div class="food-price">S/.12.90</div>  
+      <div class="food-price">S/.15.90</div>  
     </div>
     <div class="food">
       <div class="food-title">LA PARRICHI</div>
       <div class="food-description">150 grs. de Hamburguesa artesanal con salsa bbq, tocino, queso andino, lechuga y tomate en pan de chia</div>
-      <div class="food-price">S/.14.90</div>  
+      <div class="food-price">S/.17.90</div>  
     </div>
     <div class="food">
       <div class="food-title">LA TAYPA</div>
       <div class="food-description">Doble hamburguesa artesanal, tocino, huevo, papitas nativas tomate, lechuga y aros de cebolla en pan de chía</div>
-      <div class="food-price">S/.12.90</div>  
+      <div class="food-price">S/.25.90</div>  
     </div>
     <div class="food">
       <div class="food-title">LA QOSQORUNA</div>
       <div class="food-description">150 grs. de Hamburguesa artesanal con salsa de aguaymanto, queso andino, lechuga y tomate en pan de chía.</div>
-      <div class="food-price">S/.14.90</div>  
+      <div class="food-price">S/.17.90</div>  
     </div>
     <div class="food">
       <div class="food-title">LA PONJA</div>
       <div class="food-description">Tiras de pollo en salsa oriental, ajonjolí negro, tomate, lechuga en pan de chía</div>
-      <div class="food-price">S/.14.90</div>  
+      <div class="food-price">S/.12.90</div>  
     </div>  
     <div class="food">
       <div class="food-title">LA CHICKEN GREEN</div>
       <div class="food-description">Filete  de pollo al oregano con huevo y tocino crocante, lechuga y tomate en pan de chía</div>
-      <div class="food-price">S/.14.90</div>  
+      <div class="food-price">S/.12.90</div>  
     </div>
     <div class="food">
       <div class="food-title">LA FITNESS</div>
       <div class="food-description">Trozos de pollo en vinagreta de mu&ntilde;a, aros de cebolla y ensalada fresca en pan tostado</div>
-      <div class="food-price">S/.12.90</div>  
+      <div class="food-price">S/.10.90</div>  
     </div>
   </div>  
-
+  <div class="food-type-tittle">ALITAS BBQ</div>
   <div class="list-wing">
     <div class="wing">
       <div class="wing-section">
         <div class="wing-header">
           <div class="wing-header-tittle">ALITAS BBQ LIMO</div>
-          <div class="wing-header-price">S/. 16.90</div>  
+          <div class="wing-header-price">S/. 17.90</div>  
         </div>
         <div class="wing-body">06 piezas de alitas de pollo ba&ntilde;adas en salsa picante y aji limo, acompa&ntilde;adas de papitas nativas</div>
       </div>
@@ -84,7 +86,7 @@
       <div class="wing-section" id="order2">
         <div class="wing-header">
           <div class="wing-header-tittle">ALITAS BBQ AGUAYMANTO</div>
-          <div class="wing-header-price">S/. 16.90</div>  
+          <div class="wing-header-price">S/. 17.90</div>  
         </div>
         <div class="wing-body">06 piezas de alitas de pollo ba&ntilde;adas en salsa de aguaymanto BBQ, acompa&ntilde;adas de papitas nativas</div>
       </div>
@@ -93,7 +95,7 @@
       <div class="wing-section">
         <div class="wing-header">
           <div class="wing-header-tittle">ALITAS BBQ ORIENTALES</div>
-          <div class="wing-header-price">S/. 16.90</div>  
+          <div class="wing-header-price">S/. 17.90</div>  
         </div>
         <div class="wing-body">06 piezas de alitas de pollo ba&ntilde;adas en salsa oriental y ajonjoli, acompa&ntilde;adas de papitas nativas</div>
       </div>
@@ -102,30 +104,139 @@
       </div>
     </div>
   </div>
-
+  <div class="food-type-tittle">SALCHIPAPAS</div>
   <div class="list-food">
     <div class="food">
-      <div class="food-title">LA CLASICA</div>
-      <div class="food-description">Salchicha de pollo con papas nativas fritas</div>
-      <div class="food-price">S/.12.90</div>  
+      <div class="food-title">LA MIKI</div>
+      <div class="food-description">Salchicha frankfurter, salchicha de pollo y chorizo parrillero con papas nativas</div>
+      <div class="food-price">S/.14.90</div>  
     </div>
     <div class="food">
-      <div class="food-title">LA MIKI</div>
-      <div class="food-description">Salchicha frankfurter, salchipa de pollo y chorizo parrillero con papas nativas fritas</div>
-      <div class="food-price">S/.14.90</div>  
+      <div class="food-title">LA 4 SUYOS</div>
+      <div class="food-description">Salchicha de pollo en trozos, chorizo y huevo con papas nativas fritas</div>
+      <div class="food-price">S/.17.90</div>  
     </div>
     <div class="food">
       <div class="food-title">LA CHORITA</div>
       <div class="food-description">Chorizo parrillero con papas nativas fritas</div>
-      <div class="food-price">S/.12.90</div>  
+      <div class="food-price">S/.13.90</div>  
     </div>
     <div class="food">
-      <div class="food-title">LA 4 SUYOS</div>
-      <div class="food-description">Salchicha, pollo, chorizo y huevo con papas nativas fritas</div>
+      <div class="food-title">FINGER CRUNCH</div>
+      <div class="food-description">Deditos de pollo crujientes con papas nativas fritas</div>
       <div class="food-price">S/.14.90</div>  
+    </div>
+    <div class="food">
+      <div class="food-title">LA CLASICA</div>
+      <div class="food-description">Salchicha de pollo con papas nativas fritas</div>
+      <div class="food-price">S/.11.90</div>  
+    </div>
+  </div>  
+  <div class="food-type-tittle">BEBIDAS</div>
+  <div class="list-food">
+    <div class="food">
+      <div class="food-title">A&Ntilde;A&Ntilde;AU</div>
+      <div class="food-description">Homenaje a nuestros origenes, macerado de frutillas del Valle Sagrado aromatizados con hierba buena y muña</div>
+      <div class="food-price">S/.18.00</div>  
+    </div>
+    <div class="food">
+      <div class="food-title">CHILCANOS</div>
+      <div class="food-description">(Clasico, maracuya, aguaymanto, arandanos, fruta de estacion)</div>
+      <div class="food-price">S/.15.00</div>  
+    </div>
+    <div class="food">
+      <div class="food-title">HUMANTAY</div>
+      <div class="food-description">Tan germosa como nuestra laguna, refrescante batido de pisco con jugo de piña y toques de curacao</div>
+      <div class="food-price">S/.16.00</div>  
+    </div>
+    <div class="food">
+      <div class="food-title">MOJITOS</div>
+      <div class="food-description">(Clasico, maracuya, aguaymanto, arandanos, fruta de estacion)</div>
+      <div class="food-price">S/.15.00</div>  
+    </div>
+    <div class="food">
+      <div class="food-title">QOMER BITE</div>
+      <div class="food-description">Para espiritus mordaces y arriesgados; una combinacion de ron blanco, licor de menta y grnadina</div>
+      <div class="food-price">S/.14.90</div>  
+    </div>
+    <div class="food">
+      <div class="food-title">SOURS</div>
+      <div class="food-description">(Clasico, maracuya, aguaymanto, arandanos, fruta de estacion)</div>
+      <div class="food-price">S/.16.00</div>  
+    </div>
+    <div class="food">
+      <div class="food-title">CREPUSCULO</div>
+      <div class="food-description">Acompaña tu atardecer con esta mezcla de vodka, frutillas en granadina y curacao</div>
+      <div class="food-price">S/.19.00</div>  
+    </div>
+    <div class="food">
+      <div class="food-title">CERVEZAS</div>
+      <div class="food-description">370 ml. cusqueña, dorada, malta, red label, doble malta, corona</div>
+      <div class="food-price">S/.10.00</div>  
+    </div>
+  </div>  
+  <div class="food-type-tittle">PITEADOS</div>
+  <div class="list-food">
+    <div class="food">
+      <div class="food-title">CITRI PUNCH</div>
+      <div class="food-description">Para arrancar la noche con esta mezcla de Vodka, frutillas en granadina y curacao</div>
+      <div class="food-price">S/.18.00</div>  
+    </div>
+    <div class="food">
+      <div class="food-title">TROPITEADO</div>
+      <div class="food-description">Te cusqueño saborizado con jugo de piña y pisco</div>
+      <div class="food-price">S/.12.00</div>  
+    </div>
+    <div class="food">
+      <div class="food-title">MARLEY</div>
+      <div class="food-description">Reposado de jamaica con pisco con un toque de limon</div>
+      <div class="food-price">S/.12.00</div>  
+    </div>
+    <div class="food">
+      <div class="food-title">MACUMBA</div>
+      <div class="food-description">Combate el frio con esta mezcla de maracuya, te y pisco</div>
+      <div class="food-price">S/.12.00</div>  
     </div>
   </div>  
 
+  <div class="food-type-tittle">SIN ALCOHOOL</div>
+  <div class="list-food">
+    <div class="food">
+      <div class="food-title">FRUTIYADA</div>
+      <div class="food-description">Refrescante jugo de frutillas aromatizadas con hierba buena</div>
+      <div class="food-price">S/.8.50</div>  
+    </div>
+    <div class="food">
+      <div class="food-title">LIMONANDINA</div>
+      <div class="food-description">Limonada saborizada con hierba buena y muña</div>
+      <div class="food-price">S/.8.50</div>  
+    </div>
+    <div class="food">
+      <div class="food-title">MARACUMENTAY</div>
+      <div class="food-description">Extracto de maracuya con menta y limon</div>
+      <div class="food-price">S/.12.00</div>  
+    </div>
+    <div class="food">
+      <div class="food-title">GASEOSAS</div>
+      <div class="food-description">Coca Cola, fanta sprite 500 ml</div>
+      <div class="food-price">S/.5.00</div>  
+    </div>
+    <div class="food">
+      <div class="food-title">CAFE</div>
+      <div class="food-description">Cafe pasado</div>
+      <div class="food-price">S/.5.00</div>  
+    </div>
+    <div class="food">
+      <div class="food-title">AGUA</div>
+      <div class="food-description">San Luis, Cielo</div>
+      <div class="food-price">S/.4.00</div>  
+    </div>
+    <div class="food">
+      <div class="food-title">INFUSIONES</div>
+      <div class="food-description">Te, Anis, Muña, etc. </div>
+      <div class="food-price">S/.3.00</div>  
+    </div>
 
+  </div>  
 </body>
 </html>
