--- a/index.html
+++ b/index.html
@@ -21,47 +21,47 @@
   <div class="list-food">
     <div class="food">
       <div class="food-title">LA A&Ntilde;A&Ntilde;AU</div>
-      <div class="food-description">150 gr de hamburguesa artesanal, lechuga y tomate en pan de chia</div>
+      <div class="food-description">150 gr de hamburguesa artesanal, lechuga y tomate en pan de ch&iacute;a. Acompa&ntilde;adas de papas nativas.</div>
       <div class="food-price">S/.13.90</div>  
     </div>
     <div class="food">
       <div class="food-title">LA PAISANA</div>
-      <div class="food-description">150 grs. de hamburguesa artesanal, queso andino, lechuga y tomate en pan de chia</div>
+      <div class="food-description">150 grs. de hamburguesa artesanal, queso andino, lechuga y tomate en pan de ch&iacute;a. Acompa&ntilde;adas de papas nativas.</div>
       <div class="food-price">S/.15.90</div>  
     </div>
     <div class="food">
       <div class="food-title">LA PABLUCHA</div>
-      <div class="food-description">150 grs. de hamburguesa artesanal con tomates contados en ajo, chips de camote, lechuga en pan de chía</div>
+      <div class="food-description">150 grs. de hamburguesa artesanal con tomates contados en ajo, chips de camote, lechuga en pan de ch&iacute;a. Acompa&ntilde;adas de papas nativas.</div>
       <div class="food-price">S/.15.90</div>  
     </div>
     <div class="food">
       <div class="food-title">LA PARRICHI</div>
-      <div class="food-description">150 grs. de Hamburguesa artesanal con salsa bbq, tocino, queso andino, lechuga y tomate en pan de chia</div>
+      <div class="food-description">150 grs. de Hamburguesa artesanal con salsa bbq, tocino, queso andino, lechuga y tomate en pan de ch&iacute;a. Acompa&ntilde;adas de papas nativas.</div>
       <div class="food-price">S/.17.90</div>  
     </div>
     <div class="food">
       <div class="food-title">LA TAYPA</div>
-      <div class="food-description">Doble hamburguesa artesanal, tocino, huevo, papitas nativas tomate, lechuga y aros de cebolla en pan de chía</div>
+      <div class="food-description">Doble hamburguesa artesanal, tocino, huevo, papitas nativas tomate, lechuga y aros de cebolla en pan de ch&iacute;a. Acompa&ntilde;adas de papas nativas.</div>
       <div class="food-price">S/.25.90</div>  
     </div>
     <div class="food">
       <div class="food-title">LA QOSQORUNA</div>
-      <div class="food-description">150 grs. de Hamburguesa artesanal con salsa de aguaymanto, queso andino, lechuga y tomate en pan de chía.</div>
+      <div class="food-description">150 grs. de Hamburguesa artesanal con salsa de aguaymanto, queso andino, lechuga y tomate en pan de ch&iacute;a. Acompa&ntilde;adas de papas nativas.</div>
       <div class="food-price">S/.17.90</div>  
     </div>
     <div class="food">
       <div class="food-title">LA PONJA</div>
-      <div class="food-description">Tiras de pollo en salsa oriental, ajonjolí negro, tomate, lechuga en pan de chía</div>
+      <div class="food-description">Tiras de pollo en salsa oriental, ajonjol&iacute; negro, tomate, lechuga en pan de ch&iacute;a. Acompa&ntilde;adas de papas nativas.</div>
       <div class="food-price">S/.12.90</div>  
     </div>  
     <div class="food">
       <div class="food-title">LA CHICKEN GREEN</div>
-      <div class="food-description">Filete  de pollo al oregano con huevo y tocino crocante, lechuga y tomate en pan de chía</div>
+      <div class="food-description">Filete  de pollo al oregano con huevo y tocino crocante, lechuga y tomate en pan de ch&iacute;a. Acompa&ntilde;adas de papas nativas.</div>
       <div class="food-price">S/.12.90</div>  
     </div>
     <div class="food">
       <div class="food-title">LA FITNESS</div>
-      <div class="food-description">Trozos de pollo en vinagreta de mu&ntilde;a, aros de cebolla y ensalada fresca en pan tostado</div>
+      <div class="food-description">Trozos de pollo en vinagreta de mu&ntilde;a, aros de cebolla y ensalada fresca en pan tostado. Acompa&ntilde;adas de papas nativas.</div>
       <div class="food-price">S/.10.90</div>  
     </div>
   </div>  
@@ -136,22 +136,22 @@
   <div class="list-food">
     <div class="food">
       <div class="food-title">A&Ntilde;A&Ntilde;AU</div>
-      <div class="food-description">Homenaje a nuestros origenes, macerado de frutillas del Valle Sagrado aromatizados con hierba buena y muña</div>
+      <div class="food-description">Homenaje a nuestros origenes, macerado de frutillas del Valle Sagrado aromatizados con hierba buena y mu&ntilde;a</div>
       <div class="food-price">S/.18.00</div>  
     </div>
     <div class="food">
       <div class="food-title">CHILCANOS</div>
-      <div class="food-description">(Clasico, maracuya, aguaymanto, arandanos, fruta de estacion)</div>
+      <div class="food-description">(Clasico, maracuy&aacute;, aguaymanto, arandanos, fruta de estacion)</div>
       <div class="food-price">S/.15.00</div>  
     </div>
     <div class="food">
       <div class="food-title">HUMANTAY</div>
-      <div class="food-description">Tan germosa como nuestra laguna, refrescante batido de pisco con jugo de piña y toques de curacao</div>
+      <div class="food-description">Tan germosa como nuestra laguna, refrescante batido de pisco con jugo de pi&ntilde;a y toques de curacao</div>
       <div class="food-price">S/.16.00</div>  
     </div>
     <div class="food">
       <div class="food-title">MOJITOS</div>
-      <div class="food-description">(Clasico, maracuya, aguaymanto, arandanos, fruta de estacion)</div>
+      <div class="food-description">(Clasico, maracuy&aacute;, aguaymanto, arandanos, fruta de estacion)</div>
       <div class="food-price">S/.15.00</div>  
     </div>
     <div class="food">
@@ -161,30 +161,30 @@
     </div>
     <div class="food">
       <div class="food-title">SOURS</div>
-      <div class="food-description">(Clasico, maracuya, aguaymanto, arandanos, fruta de estacion)</div>
+      <div class="food-description">(Clasico, maracuy&aacute;, aguaymanto, arandanos, fruta de estacion)</div>
       <div class="food-price">S/.16.00</div>  
     </div>
     <div class="food">
       <div class="food-title">CREPUSCULO</div>
-      <div class="food-description">Acompaña tu atardecer con esta mezcla de vodka, frutillas en granadina y curacao</div>
+      <div class="food-description">Acompa&ntilde;a tu atardecer con esta mezcla de vodka, frutillas en granadina y curacao</div>
       <div class="food-price">S/.19.00</div>  
     </div>
     <div class="food">
       <div class="food-title">CERVEZAS</div>
-      <div class="food-description">370 ml. cusqueña, dorada, malta, red label, doble malta, corona</div>
+      <div class="food-description">370 ml. cusque&ntilde;a, dorada, malta, red label, doble malta, corona</div>
       <div class="food-price">S/.10.00</div>  
     </div>
-  </div>  
-  <div class="food-type-tittle">PITEADOS</div>
-  <div class="list-food">
     <div class="food">
       <div class="food-title">CITRI PUNCH</div>
       <div class="food-description">Para arrancar la noche con esta mezcla de Vodka, frutillas en granadina y curacao</div>
       <div class="food-price">S/.18.00</div>  
     </div>
+  </div>  
+  <div class="food-type-tittle">PITEADOS</div>
+  <div class="list-food">
     <div class="food">
       <div class="food-title">TROPITEADO</div>
-      <div class="food-description">Te cusqueño saborizado con jugo de piña y pisco</div>
+      <div class="food-description">Te cusque&ntilde;o saborizado con jugo de pi&ntilde;a y pisco</div>
       <div class="food-price">S/.12.00</div>  
     </div>
     <div class="food">
@@ -194,7 +194,7 @@
     </div>
     <div class="food">
       <div class="food-title">MACUMBA</div>
-      <div class="food-description">Combate el frio con esta mezcla de maracuya, te y pisco</div>
+      <div class="food-description">Combate el frio con esta mezcla de maracuy&aacute;, te y pisco</div>
       <div class="food-price">S/.12.00</div>  
     </div>
   </div>  
@@ -208,12 +208,12 @@
     </div>
     <div class="food">
       <div class="food-title">LIMONANDINA</div>
-      <div class="food-description">Limonada saborizada con hierba buena y muña</div>
+      <div class="food-description">Limonada saborizada con hierba buena y mu&ntilde;a</div>
       <div class="food-price">S/.8.50</div>  
     </div>
     <div class="food">
-      <div class="food-title">MARACUMENTAY</div>
-      <div class="food-description">Extracto de maracuya con menta y limon</div>
+      <div class="food-title">MARACUMENTA</div>
+      <div class="food-description">Extracto de maracuy&aacute; con menta y limon</div>
       <div class="food-price">S/.12.00</div>  
     </div>
     <div class="food">
@@ -233,7 +233,7 @@
     </div>
     <div class="food">
       <div class="food-title">INFUSIONES</div>
-      <div class="food-description">Te, Anis, Muña, etc. </div>
+      <div class="food-description">Te, Anis, Mu&ntilde;a, etc. </div>
       <div class="food-price">S/.3.00</div>  
     </div>
 
